# rust_category

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: pypi.yml  test.yml
python/: base.py
src/: main.rs  multi.rs  single.rs  tests.rs
