[package]
name = "category"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "category"
crate-type = ["dylib"]
path = "src/main.rs"

[[test]]
name = "category-test"
path = "src/tests.rs"

[dependencies]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
