[package]
name = "rust_category"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_category"
crate-type = ["cdylib"]
path = "src/main.rs"

[[test]]
name = "category-test"
path = "src/tests.rs"

[dependencies]
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]